tests/testcases/invalid/semantic/50_incomplete_enum_parameter.ciel
// Test: Incomplete enum used as function parameter
// Expected: Error - incomplete enum cannot be used as function parameter

enum ForwardDeclaredEnum;

void process(enum ForwardDeclaredEnum value);

int main(){
    return 0;
}
